--- a/task01/styles.css
+++ b/task01/styles.css
@@ -42,8 +42,8 @@ tt{
 
 .navbar{
   background-color: rgb(78, 89, 140);
-  width: 1820px;
-  height:2.5%;
+  width: 100%;
+  height:30px;
   position: fixed;
   top: -2px;
   padding-top: 18px;
@@ -76,7 +76,7 @@ tt{
   font-size: 15px;
   padding: 2px 2px 2px 2px;
   float: right;
-  margin-right: 10px;
+  margin-right: 60px;
 }
 
 .html:hover{
@@ -151,7 +151,7 @@ tt{
 .timetable{
   border-bottom: 2px solid;
   border-bottom-color: rgb(78, 89, 140);
-  box-shadow: 20px 20px 50px rgb(238, 238, 238);
+  box-shadow: 0px 0px 15px 5px #DDDDDD;
 }
 
 
