--- a/task01/styles.css
+++ b/task01/styles.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
+
+@keyframe image {
+  from{}
+  to{}
+}
 
 tt{
   font-size: 15px;
@@ -15,17 +19,12 @@ tt{
   height: 60px;
   align-self: left;
   position: fixed;
-  top: 0px;
-  left: -5px;
-}
-
-.logo-hover{
-  zoom: 110%;
+  top: 1px;
+  left: -3px;
 }
 
 .Roboto-font{
   font-family: 'Roboto';
-
 }
 
 
@@ -37,16 +36,15 @@ tt{
 .center{
   display: flex;
   align-content: flex-start;
-
 }
 
 .navbar{
   background-color: rgb(78, 89, 140);
   width: 100%;
-  height:30px;
+  height:25px;
   position: fixed;
   top: -2px;
-  padding-top: 18px;
+  padding-top: 15px;
   padding-right: 42px;
   padding-bottom: 16px;
   margin-left: 40px;
@@ -55,35 +53,41 @@ tt{
 .home{
   text-decoration: none;
   color: white;
-  padding: 2px 2px 2px 2px;
+  padding: 5px 2px 2px 2px;
   font-size: 15px;
   float: right;
-  margin-right: 60px;
-
+  margin-right: 50px;
 }
 
 .home:hover{
-  color: rgb(249, 199, 132);
-  border-bottom: 2px solid;
-  border-color: rgb(249, 199, 132);
+  color: black;
   transform: scale(1.1);
   transition: 0.3s;
+  background-color: rgb(249, 199, 132);
+  border-width: 0px;
+  border-radius: 5px;
+  vertical-align: middle;
+  padding: 5px 8px 5px 8px;
+
 }
 
 .html{
   text-decoration: none;
   color: white;
   font-size: 15px;
-  padding: 2px 2px 2px 2px;
+  padding: 5px 10px 2px 2px;
   float: right;
-  margin-right: 60px;
+  margin-right: 75px;
 }
 
 .html:hover{
-  color: rgb(249, 199, 132);
-  border-bottom: 2px solid;
-  border-color: rgb(249, 199, 132);
+  color: black;
+  background-color: rgb(249, 199, 132);
+  border-width: 0px;
+  border-radius: 5px;
+  padding: 5px 8px 5px 8px;
   transform: scale(1.1);
+  vertical-align: middle;
   transition: 0.3s;
 }
 .intro{
@@ -131,13 +135,6 @@ tt{
   transition: 0.5s;
   transform: scale(1.1);
 }
-
-.wh-button a{
-  text-decoration: none;
-  color: black;
-}
-
-
 .sample-table{
   font-size: 30px;
   text-align: left;
@@ -154,7 +151,11 @@ tt{
   box-shadow: 0px 0px 15px 5px #DDDDDD;
 }
 
-
+th{
+  background-color: rgb(78, 89, 140);
+  color: white;
+  height: 45px;
+}
 
 .th-1{
   padding-left: 10px;
@@ -175,19 +176,17 @@ tt{
 .th-5{
   padding-left: 10px;
   width: 180px;
+  vertical-align: middle;
 }
 
 .t-data{
   padding-left: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-left: 0.5px solid;
   border-color: rgb(238, 238, 238);
 }
 
 .t-data-l{
   padding-top: 20px;
-  padding-bottom: 5px;
   padding-left: 10px;
 }
 
@@ -196,11 +195,7 @@ tt{
   color: rgb(78, 89, 140);
 }
 
-.tr-2{
-  background-color: rgb(238, 238, 238);
-}
-
-.tr-4{
+.tr-2, .tr-4{
   background-color: rgb(238, 238, 238);
 }
 
@@ -212,15 +207,15 @@ tt{
   height: 50px;
 }
 
-th{
-  background-color: rgb(78, 89, 140);
-  color: white;
-  height: 45px;
+.app{
+  height: 420px;
+  width: 570px;
+  margin-left: 80px;
 }
 
 .paragraph{
-  margin-right: 150px;
-  margin-left: 300px;
+  margin-right: 220px;
+  margin-left: 400px;
 }
 
 .p-html{
@@ -240,11 +235,12 @@ th{
 .js{
   text-align: right;
   width: 62%;
-  margin-left: 240px;
+  margin-left: 230px;
 }
 
 .form{
-  margin: 30px 300px 20px 700px;
+  margin-left: 40%;
+  margin-right: 20%;
 }
 
 .form-caption{
@@ -267,60 +263,97 @@ th{
 }
 
 #rd-1{
-  margin-left: 100px;
+  margin-left: 155px;
 }
 
 #rd-2{
-  margin-left: 20px;
+  margin-left: 60px;
+}
+
+#rd-1:hover, #rd-2:hover{
+  cursor: pointer;
+}
+
+.rd-text:hover{
+  color: rgb(78, 89, 140);
+  cursor: pointer;
 }
 
 #year{
   width: 255px;
   height: 30px;
   margin-left: 37px;
+  border: 1px solid;
+  border-color: rgb(238, 238, 238);
 }
 
 #ch-1{
-  margin-left: 100px;
+  margin-left: 85px;
 }
 
 #ch-2{
-  margin-left: 50px;
+  margin-left: 40px;
 }
 
 #ch-3{
-  margin-left: 50px;
+  margin-left: 40px;
 }
+
+#ch-1:hover, #ch-2:hover, #ch-3:hover{
+  cursor: pointer;
+}
+
+.ch-text:hover{
+  color: rgb(78, 89, 140);
+  cursor:pointer;
+}
+
+#feedback{
+  margin-left: 70px;
+  border-radius: 5px;
+}
+
 .submit{
-  height: 40px;
-  width: 90px;
-  padding: 5px 10px 5px 10px;
+  height: 30px;
+  width: 60px;
+  padding: 5px 15px 5px 15px;
   background-color: rgb(252, 175, 88);
   border-width: 0px;
   border-radius: 10px;
-  margin-left: 180px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .submit:hover{
   background-color: rgb(255, 140, 66);
   transition: 0.5s;
-  zoom: 105%;
+  transform: scale(1.1);
   transition: 0.9s;
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.s-r{
+  padding-left: 200px;
 }
 
 .reset{
-  height: 40px;
+  height: 42px;
   width: 90px;
-  padding: 5px 10px 5px 10px;
+  padding: 6px 15px 4px 15px;
   background-color: rgb(238, 238, 238);
   border-width: 0px;
   border-radius: 10px;
   margin-left: 30px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .reset:hover{
   background-color: rgb(221, 221, 221);
   transition: 0.5s;
-  zoom: 105%;
+  transform: scale(1.1);
   transition: 0.9s;
+  font-weight: bolder;
+  cursor: pointer;
 }
