--- a/task01/styles.css
+++ b/task01/styles.css
@@ -1,10 +1,14 @@
+/*Roboto font from google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@keyframe image {
-  from {}
+/*Animations*/
 
-  to {}
+@keyframes reveal {
+  0%{opacity: 0%}
+  50%{opacity: 0%;}
+  100%{opacity: 100%}
 }
+
 
 tt {
   font-size: 15px;
@@ -20,8 +24,16 @@ body {
   height: 60px;
   align-self: left;
   position: fixed;
-  top: 1px;
   left: -5px;
+  top: -1px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 1s;
+}
+
+.logo:hover{
+  transform: scale(1.2);
+  transition: 0.3s;
 }
 
 .Roboto-font {
@@ -46,6 +58,9 @@ body {
 .nav-1,
 .nav-2 {
   margin-bottom: -15px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 2s;
 }
 
 .navbar {
@@ -58,6 +73,9 @@ body {
   padding-right: 42px;
   padding-bottom: 16px;
   margin-left: 40px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 2s;
 }
 
 .home {
@@ -136,6 +154,9 @@ body {
   width: 100%;
   height: auto;
   margin-top: 78px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 2s;
 }
 
 .home-p p {
@@ -147,8 +168,10 @@ body {
   padding-top: 38px;
   padding-right: 0px;
   margin-top: 48px;
-  
   margin-right: 42px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 3s;
 }
 
 .tags {
@@ -192,6 +215,9 @@ body {
   /* hello */
   border-bottom-color: rgb(78, 89, 140);
   box-shadow: 0px 0px 15px 5px #DDDDDD;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 4s;
 }
 
 th {
@@ -265,11 +291,17 @@ th {
   height: 420px;
   width: 570px;
   margin-left: 80px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 2s;
 }
 
 .paragraph {
   margin-right: 220px;
   margin-left: 400px;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 3s;
 }
 
 .p-html {
@@ -298,6 +330,9 @@ th {
 .form {
   margin-left: 40%;
   margin-right: 20%;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 4s;
 }
 
 .form-caption {
@@ -379,6 +414,9 @@ th {
   border-radius: 10px;
   font-weight: bold;
   text-align: center;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 5s;
 }
 
 .submit:hover {
@@ -404,6 +442,9 @@ th {
   margin-left: 30px;
   font-weight: bold;
   text-align: center;
+  animation-name: reveal;
+  animation-delay: 0s;
+  animation-duration: 5s;
 }
 
 .reset:hover {
