--- a/task01/styles.css
+++ b/task01/styles.css
@@ -45,6 +45,8 @@ body {
 .logo:hover {
   transform: scale(1.2);
   transition: 0.3s;
+  transform: rotateY(360deg);
+  transition-duration: 2s;
 }
 
 .Roboto-font {
