--- a/task01/styles.css
+++ b/task01/styles.css
@@ -414,6 +414,18 @@ tr:nth-child(even) {
   cursor: default;
 }
 
+.col-1{
+  width: 25%;
+  margin: 10px 0px 0px 0px;
+  height: 0px;
+}
+
+.col-2{
+  width: 75%;
+  margin: 3px 0px 0px 0px;
+  padding-left: 80px;
+}
+
 #feedback {
   margin-left: 70px;
   border-radius: 5px;
@@ -445,7 +457,7 @@ tr:nth-child(even) {
 }
 
 .s-r {
-  padding-left: 190px;
+  padding-left: 200px;
 }
 
 .reset {
