--- a/task01/styles.css
+++ b/task01/styles.css
@@ -228,7 +228,7 @@ body {
 
 .timetable {
   border-collapse: collapse;
-  margin: 0 auto;
+  margin: 50px auto;
   border-bottom: 2px solid;
   box-shadow: 0px 0px 15px 5px #DDDDDD;
   align-self: start;
