--- a/task01/styles.css
+++ b/task01/styles.css
@@ -1,7 +1,7 @@
 /*Roboto font from google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-/*Animations*/
+/* reveal animation using using opacity*/
 
 @keyframes reveal {
   0% {
@@ -13,7 +13,22 @@
   }
 
   100% {
-    opacity: 100%
+    opacity: 100%;
+  }
+}
+
+@keyframes revealrotate {
+  0% {
+    opacity: 0%
+  }
+
+  50% {
+    opacity: 0%;
+  }
+
+  100% {
+    opacity: 100%;
+    transform: rotateY(360deg);
   }
 }
 
@@ -26,16 +41,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-@keyframes flyin {
-  0% {
-    top: -200px;
-  }
-
-  100% {
-    top: 50px;
-  }
-}
-
 /* Navigation Bar */
 
 .logo {
@@ -45,12 +50,13 @@ body {
   position: fixed;
   left: -5px;
   top: -1px;
-  animation-name: reveal;
+  animation-name: revealrotate;
   animation-delay: 0s;
-  animation-duration: 1s;
+  animation-duration: 2s;
   animation-timing-function: ease-in;
 }
 
+/*logo rotation*/
 .logo:hover {
   transform: rotateY(360deg);
   transition-duration: 2s;
@@ -61,20 +67,13 @@ body {
 }
 
 
-.text-center {
-  display: flex;
-  justify-content: center;
-}
 
-.center {
-  display: flex;
-  align-content: flex-start;
-}
-
+/*removing bullet points*/
 .nav-list {
   list-style-type: none;
 }
 
+/*reveal animation for navigation links*/
 .nav-1,
 .nav-2 {
   margin-bottom: -15px;
@@ -84,6 +83,7 @@ body {
   animation-timing-function: ease-in;
 }
 
+/*navbar div properties*/
 .navbar {
   background-color: rgb(78, 89, 140);
   width: 100%;
@@ -100,6 +100,7 @@ body {
   animation-timing-function: ease-in;
 }
 
+/*index.html link*/
 .home {
   text-decoration: none;
   color: white;
@@ -121,6 +122,7 @@ body {
 
 }
 
+/*whyhtml.html link*/
 .html {
   text-decoration: none;
   color: white;
@@ -141,15 +143,14 @@ body {
   transition: 0.3s;
 }
 
-.html:active {
-  color: black;
-  background-color: rgb(249, 199, 132);
-  border-width: 0px;
-  border-radius: 5px;
-  padding: 5px 8px 5px 8px;
-  transform: scale(1.1);
-  vertical-align: middle;
-  transition: 0.3s;
+.text-center {
+  display: flex;
+  justify-content: center;
+}
+
+.center {
+  display: flex;
+  align-content: flex-start;
 }
 
 /* First page content */
@@ -496,7 +497,6 @@ tr:nth-child(even) {
   background-color: rgb(255, 140, 66);
   transition: 0.5s;
   transform: scale(1.1);
-  transition: 0.9s;
   font-weight: bolder;
   cursor: pointer;
 }
@@ -509,7 +509,7 @@ tr:nth-child(even) {
 
 .reset {
   height: 40px;
-  width: 90px;
+  width: 93px;
   border-width: 0px;
   border-radius: 10px;
   margin-left: 30px;
@@ -525,7 +525,6 @@ tr:nth-child(even) {
   background-color: rgb(221, 221, 221);
   transition: 0.5s;
   transform: scale(1.1);
-  transition: 0.9s;
   font-weight: bolder;
   cursor: pointer;
 }
